# Transaction-Anomaly-Shrinkage-Detection

./: Build Log.md  README.md  pyproject.toml  requirements.txt  transaction_anomaly.db
app/: __init__.py  main.py
app/database/: database.py
app/models/: alert.py  refund.py  shift.py  transaction.py
app/routes/: alerts.py  analytics.py  dashboard.py  transactions.py
app/services/: alert_service.py  analytics_service.py  anomaly_detector.py  dashboard_service.py  seed_data.py  transaction_service.py
static/css/: style.css
static/js/: dashboard.js
templates/: base.html  dashboard.html
