[tool.poetry]
name = "transaction-anomaly-shrinkage-detection"
version = "0.1.0"
description = ""
authors = ["Farooq-co <masoodfarooq029@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.139.0"
uvicorn = "^0.51.0"
sqlalchemy = "^2.0.51"
alembic = "^1.18.5"
pandas = "^3.0.3"
numpy = "^2.5.1"
scikit-learn = "^1.9.0"
faker = "^40.28.1"
python-dotenv = "^1.2.2"
python-multipart = "^0.0.32"
jinja2 = "^3.1.6"
aiofiles = "^25.1.0"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
isort = "^8.0.1"
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
